Frankbelford/uatv1ba/force-app/main/default/objects/IP_CPC_Module__c/IP_CPC_Module__c.object-meta.xml
<CustomObject>
    <label>CPC Module</label>
    <nameField>
        <displayFormat>A-{000000}</displayFormat>
        <label>Recorded CPC Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CPC Modules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>