Frankbelford/uatv1ba/force-app/main/default/objects/IP_CPC_Module__c/fields/CPC_Header__c.field-meta.xml
<CustomField>
    <fullName>CPC_Header__c</fullName>
    <label>CPC Period Name</label>
    <referenceTo>IP_CPC_Header__c</referenceTo>
    <relationshipLabel>CPC Modules</relationshipLabel>
    <relationshipName>Recorded_CPC</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>