Frankbelford/uatv1ba/force-app/main/default/objects/IP_CPC_Module__c/fields/Date_Taken__c.field-meta.xml
<CustomField>
    <fullName>Date_Taken__c</fullName>
    <label>Date Taken</label>
    <type>Date</type>
</CustomField>