Frankbelford/uatv1ba/force-app/main/default/objects/IP_CPC_Module__c/fields/Module_Name__c.field-meta.xml
<CustomField>
    <fullName>Module_Name__c</fullName>
    <label>Module Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cost Reduction (1M)</fullName>
            </value>
            <value>
                <fullName>Customer Service (1M)</fullName>
            </value>
            <value>
                <fullName>DCPC First Aid (1M)</fullName>
            </value>
            <value>
                <fullName>Depot Safety (1M)</fullName>
            </value>
            <value>
                <fullName>Driver Compliance (0.5M)</fullName>
            </value>
            <value>
                <fullName>Driver Fitness and Wellbeing (0.5M)</fullName>
            </value>
            <value>
                <fullName>Driving Abroad (0.5M)</fullName>
            </value>
            <value>
                <fullName>Eco Workshop (0.5M)</fullName>
            </value>
            <value>
                <fullName>Highway Code (0.5M)</fullName>
            </value>
            <value>
                <fullName>Mobile Phone (0.5M)</fullName>
            </value>
            <value>
                <fullName>Other (0.5M)</fullName>
            </value>
            <value>
                <fullName>Other (1M)</fullName>
            </value>
            <value>
                <fullName>Reversing and Manoeuvring (0.5M)</fullName>
            </value>
            <value>
                <fullName>Roadside Safety – Recovery Vehicle (1M)</fullName>
            </value>
            <value>
                <fullName>Safe Culture (1M)</fullName>
            </value>
            <value>
                <fullName>Safe Loading (0.5M)</fullName>
            </value>
            <value>
                <fullName>Tachograph and Driver Hours (0.5M)</fullName>
            </value>
            <value>
                <fullName>Theft Prevention (0.5M)</fullName>
            </value>
            <value>
                <fullName>Urban (1M)</fullName>
            </value>
            <value>
                <fullName>Vehicle Checks (0.5M)</fullName>
            </value>
            <value>
                <fullName>Winter Driving (0.5M)</fullName>
            </value>
            <value>
                <fullName>Smiths Training (1M)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>