Frankbelford/uatv1ba/force-app/main/default/objects/IP_CPC_Module__c/fields/Module_Value__c.field-meta.xml
<CustomField>
    <fullName>Module_Value__c</fullName>
    <formula>IF(
 OR(
  ISPICKVAL( Module_Name__c , &quot;Cost Reduction (1M)&quot;),
  ISPICKVAL(Module_Name__c, &quot;Customer Service (1M)&quot;),
ISPICKVAL(Module_Name__c, &quot;DCPC First Aid (1M)&quot;),
ISPICKVAL(Module_Name__c, &quot;Depot Safety (1M)&quot;),
ISPICKVAL(Module_Name__c, &quot;Other (1M)&quot;),
ISPICKVAL(Module_Name__c, &quot;Roadside Safety – Recovery Vehicle (1M)&quot;),
ISPICKVAL(Module_Name__c, &quot;Safe Culture (1M)&quot;),
ISPICKVAL(Module_Name__c, &quot;Urban (1M)&quot;),
ISPICKVAL(Module_Name__c, &quot;Smiths Training (1M)&quot;)
  ),
 1,
 0.5
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Module Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>