Frankbelford/uatv1ba/force-app/main/default/objects/IP_CPC_Module__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <label>Notes</label>
    <length>100</length>
    <type>Text</type>
</CustomField>